# AdaptiveGPT

./: .gitignore  .prettierrc  AdaptiveGPT.ipynb  AdaptiveGPT_en.ipynb  README.md  adaptive.service  adaptivegpt_activity_monitor.sh  package-lock.json  package.json  pyproject.toml  seed.py
adaptive/: __init__.py  __main__.py
adaptive/assets/mail/: template_forgot_password.txt  template_welcome_student.txt
adaptive/assets/uploads/: 1738351373551391_text_chunks.json  17383513736210182_text_chunks.json  1738361134120449_text_chunks.json  1738361134191052_text_chunks.json  1738365967769962_text_chunks.json  17383659679267871_text_chunks.json  1738366607005163_text_chunks.json  173836660717749_text_chunks.json  1738366628880909_text_chunks.json  17383666290713449_text_chunks.json  17387896951033752_text_chunks.json  1738789695260961_text_chunks.json  (+20 more)
adaptive/blueprints/: activity_blueprint.py  generic_blueprint.py  student_blueprint.py  subject_blueprint.py  teacher_blueprint.py
adaptive/models/: __init__.py  activity.py  entity_manager.py  organization.py  question.py  student.py  student_answer.py  subject.py  subject_student.py  teacher.py  text_chunk.py  trajectory.py
adaptive/templates/: edit_student.html  index.html  my_account.html  new_activity.html  new_student.html  new_subject.html  register_students_to_subject.html  reset_password.html  sign_in.html  sign_up.html  student_dashboard.html  teacher_dashboard.html  view_active_trajectories.html  view_activity.html  view_student_progress_in_subject.html  view_students.html  view_subject.html
(+3 files in other folders)
