[tool.poetry]
name = "adaptive"
version = "0.1.0"
description = "Adaptive learning trajectories based on LLMs."
authors = ["Paulo Severo <paulosilas@unipampa.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
groq = "^0.15.0"
sqlalchemy = "^2.0.37"
pymysql = "^1.1.1"
faker = "^33.3.1"
cryptography = "^44.0.0"
docling = "^2.17.0"
ftfy = "^6.3.1"
gunicorn = "^23.0.0"
langchain-groq = "^0.2.4"
python-dotenv = "^1.0.1"
itsdangerous = "^2.2.0"
transformers = "4.42.4"
google-genai = "^1.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160
